--- a/index.html
+++ b/index.html
@@ -1,29 +1,7 @@
 ---
-title: Test
+layout: 	default
+title: 		Welcome
 ---
-{% include head.html %}
 
-<body>	
-	
-	<header>
-		{% include svg/avi.html %}
-	</header>
-		
-	<nav>
-		<a href="https://www.behance.net/nroth10">Portfolio</a>
-		<a href="mailto:nroth10@gmail.com">Contact</a>
-	</nav>
-
-	<!-- SOCIAL -->
-	<div class="social">
-		<!-- <a href="#"><span class="fa fa-facebook-square"></span></a> -->
-		<!-- <a href="#"><span class="fa fa-tumblr"></span></a> -->
-		<a href="http://instagram.com/tayox"><span class="fa fa-instagram"></span></a>
-		<!-- <a href="#"><span class="fa fa-pinterest"></span></a> -->
-		<a href="http://twitter.com/tayoxlife"><span class="fa fa-twitter"></span></a>
-	</div>
-
-</body>
-
-
-</html>
+<!-- HERO -->
+{% include hero.html %}
