--- a/sfp.html
+++ b/sfp.html
@@ -2,3 +2,17 @@
 layout: 	default-sfp
 title: 		Welcome
 ---
+
+<!-- HERO -->
+{% include sfp-hero.html %}
+
+<!-- Cover Letter -->
+{% include sfp-cover-letter.html %}
+
+<!-- Thank You & Video -->
+{% include sfp-thank-you.html %}
+
+<!-- Questions -->
+{% include sfp-faq.html %}
+
+<!-- Hey, you're readin my code?!? Do you like what you see?  c|:{D // its a mustached man with a hat and a smile!  -->
