Finish cleaning SFP project

--- a/sfp.html
+++ b/sfp.html
@@ -1,66 +1,31 @@
 ---
-layout: 	default-sfp
+<!-- layout: 	default-sfp -->
 title: 		Welcome
 ---
 
-<!-- HERO -->
-{% include job/sfp/hero.html %}
-<!-- Cover Letter -->
-{% include job/sfp/cover-letter.html %}
+{% include head.html %}
 
-<!-- Thank You & Video -->
-{% include job/sfp/thank-you.html %}
+<body>
 
-<!-- Questions -->
-{% include job/sfp/faq.html %}
+<div class="sfp-wrapper slide">
+  <!-- HERO -->
+  {% include job/sfp/hero.html %}
+  <!-- Cover Letter -->
+  {% include job/sfp/cover-letter.html %}
 
-<!-- Hey, you're readin my code?!? Do you like what you see? 
+  <!-- Thank You & Video -->
+  {% include job/sfp/thank-you.html %}
 
+  <!-- Questions -->
+  {% include job/sfp/faq.html %}
 
-                  XXXX
-                 X    XX
-                X  ***  X                XXXXX
-               X  *****  X            XXX     XX
-            XXXX ******* XXX      XXXX          XX
-          XX   X ******  XXXXXXXXX                XX XXX
-        XX      X ****  X                           X** X
-       X        XX    XX     X                      X***X
-      X         //XXXX       X                      XXXX
-     X         //   X                             XX
-    X         //    X          XXXXXXXXXXXXXXXXXX/
-    X     XXX//    X          X
-    X    X   X     X         X
-    X    X    X    X        X
-     X   X    X    X        X                    XX
-     X    X   X    X        X                 XXX  XX
-      X    XXX      X        X               X  X X  X
-      X             X         X              XX X  XXXX
-       X             X         XXXXXXXX\     XX   XX  X
-        XX            XX              X     X    X  XX
-          XX            XXXX   XXXXXX/     X     XXXX
-            XXX             XX***         X     X
-               XXXXXXXXXXXXX *   *       X     X
-                            *---* X     X     X
-                           *-* *   XXX X     X
-                           *- *       XXX   X
-                          *- *X          XXX
-                          *- *X  X          XXX
-                         *- *X    X            XX
-                         *- *XX    X             X
-                        *  *X* X    X             X
-                        *  *X * X    X             X
-                       *  * X**  X   XXXX          X
-                       *  * X**  XX     X          X
-                      *  ** X** X     XX          X
-                      *  **  X*  XXX   X         X
-                     *  **    XX   XXXX       XXX
-                    *  * *      XXXX      X     X
-                   *   * *          X     X     X
-     =======*******   * *           X     X      XXXXXXXX\
-            *         * *      /XXXXX      XXXXXXXX\      )
-       =====**********  *     X                     )  \  )
-         ====*         *     X               \  \   )XXXXX
-    =========**********       XXXXXXXXXXXXXXXXXXXXXX
+  <!-- Hey, you're readin my code?!? -->
+  {% include job/sfp/snoopy.html %}
+</div>
+
+{% include job/sfp/footer.html %}
+</body>
+</html>
 
 
-Snoopy ASCII ©Douglas A. Wright c. 1978 -->
+
