--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@ title: Soon
 				{% include svg/avi.html %}
 			</a>
 			<h2>New Site Coming Soon</h2>
-			<a class="text-link" href="{{site.baseurl}}blog">Go to the blog</a>
+			<!-- <a class="text-link" href="{{site.baseurl}}blog">Go to the blog</a> -->
+			<a class="text-link" href="{{site.baseurl}}resume">Resume</a>
+			<a class="text-link" href="{{site.data.settings.portfolio}}">Portfolio</a>
+			{{site.portfolio}}
 			<div class="channels">
 				{% for c in site.data.settings.channels %}
 				<a href="{{c.link}}">
